--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:tailwind": "npx tailwind build src/main.css -o src/assets/css/styles.css",
+    "build:css": "postcss src/main.css -o src/assets/css/styles.css",
+    "watch": "watch \"npm run build:tailwind\" ./src/components"
   },
   "dependencies": {
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
@@ -21,11 +26,16 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "postcss": "^7.0.17",
+    "postcss-cli": "^6.1.3",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.10"
+    "tailwindcss": "^1.1.4",
+    "vue-template-compiler": "^2.6.10",
+    "watch": "^1.0.2"
   },
   "eslintConfig": {
     "root": true,
