--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build:tailwind": "npx tailwind build src/main.css -o src/assets/css/styles.css",
-    "build:css": "postcss src/main.css -o src/assets/css/styles.css",
-    "watch": "watch \"npm run build:tailwind\" ./src/components"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.4.4",
@@ -30,8 +27,6 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "postcss": "^7.0.17",
-    "postcss-cli": "^6.1.3",
     "prettier": "^1.19.1",
     "tailwindcss": "^1.1.4",
     "vue-template-compiler": "^2.6.10",
